--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-12 12:17:51
+lastsearch = 2024-07-12 12:52:04
 
 [shopee.vn]
-match = -137.5%%
-title = Chăn cừu mai rùa siêu ấm kích thước 2mx2m3 nặng 2kg
-url = https://shopee.vn/Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng-2kg-i.18553977.19585650220
+match = -162.5%%
+title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ...
+url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
 
 [www.instagram.com]
 match = 12.5%%
@@ -27,9 +27,9 @@ title = Lư hương đá chân đặt mai rùa
 url = https://tuongdamynghe.com/trang-tri/lu-huong/lu-huong-da-chan-dat-mai-rua/
 
 [www.vinmec.com]
-match = -37.5%%
-title = Tác dụng của mai rùa với sức khỏe
-url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/tac-dung-cua-mai-rua-voi-suc-khoe/
+match = -18.8%%
+title = Tác dụng của vị thuốc từ rùa
+url = https://www.vinmec.com/vi/y-hoc-co-truyen/duoc-lieu/tac-dung-cua-vi-thuoc-tu-rua/
 
 [www.youtube.com]
 match = -131.2%%
@@ -107,8 +107,8 @@ title = Micro mai rùa đa hướng Shure MX393/S
 url = https://tca.vn/micro-mai-rua-da-huong-shure-mx393-s/
 
 [trungtamthuocdantoc.com]
-match = -187.5%%
-title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị Thuốc
+match = -175.0%%
+title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị ...
 url = https://trungtamthuocdantoc.com/duoc-lieu/mai-rua
 
 [medcare.com.vn]
