--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-12 11:51:51
+lastsearch = 2024-07-12 12:50:15
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -47,9 +47,9 @@ title = Chiếu Nhựa Thái Lan
 url = https://www.facebook.com/chieunhuathailan/
 
 [www.diepxuan.com]
-match = 15.0%%
-title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+match = 0.0%%
+title = Chiếu nhựa Hà Nội GT 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-gt-180x200.html
 
 [www.lazada.vn]
 match = 10.0%%
