--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-12 10:16:05
+lastsearch = 2024-07-12 12:50:59
 
 [www.youtube.com]
-match = -500.0%%
-title = Ren plays Chalk Outlines (his collab with Chichilla). The Big ...
-url = https://www.youtube.com/watch?v=6ROuMEXhOfA
+match = -390.0%%
+title = Renren Is Love, Renren Is Life | 14 Days With You (Day 1)
+url = https://www.youtube.com/watch?v=dS5JtXqOR-I
 
 [www.sinimed.co.il]
 match = -370.0%%
@@ -123,7 +123,7 @@ url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
 match = -240.0%%
-title = 14 Days With You by cutiesai - Itch.io
+title = 14 Days With You by cutiesai - itch.io
 url = https://cutiesai.itch.io/14dayswithyou
 
 [www.koha.net]
@@ -157,8 +157,8 @@ title = Conception Vessel 14: Juque : Great Palace Gateway
 url = https://www.acupuncture-points.org/conception-vessel-14.html
 
 [www.instagram.com]
-match = -370.0%%
-title = Ren King (@ren.el.king) • Instagram photos and videos
+match = -380.0%%
+title = Ren King 🪴 (@ren.el.king) • Instagram photos and videos
 url = https://www.instagram.com/ren.el.king/?hl=en
 
 [www.researchgate.net]
