--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-12 15:44:54
+lastsearch = 2024-07-12 17:17:43
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -13.3%%
-title = Grand Loyal Poker Club
-url = https://www.facebook.com/GrandLoyal/
+match = 0.0%%
+title = PHOTOTIMEVietnam
+url = https://www.facebook.com/phototimevn/
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -365,4 +365,14 @@ url = https://www.reddit.com/r/destiny2/comments/10e03el/bungie_can_we_please_ha
 match = -180.0%%
 title = Các tuyến xe bus đi Sân bay Quốc tế Nội Bài - VATC
 url = http://vatc.vn/vi/tin-tuc/tin-san-bay-noi-bai/ca-c-tuyê-n-xe-bus-đi-sân-bay-quô-c-tê-nô-i-ba-i/
+
+[www.celadonsrc.com.vn]
+match = -200.0%%
+title = Giải Tennis Cty TNHH Cung Cấp Chiếu Sáng Trung Sơn ...
+url = https://www.celadonsrc.com.vn/tin-tuc-su-kien/giai-tennis-cty-tnhh-cung-cap-chieu-sang-trung-son-nam-2022
+
+[homefarm.vn]
+match = -140.0%%
+title = Vị Trí Cửa Hàng Homefarm Tại TP Hồ Chí Minh
+url = https://homefarm.vn/pages/locationhcm
 
