--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-12 16:52:58
+lastsearch = 2024-07-12 17:15:44
 
 [shopee.vn]
 match = 25.0%%
@@ -97,9 +97,9 @@ title = Hệ thống kinh lạc trong cơ thể
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/he-thong-kinh-lac-trong-co/
 
 [books.google.com]
-match = -218.8%%
-title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+12&source=bl&ots=LZu5XT9BXh&sig=ACfU3U2pTQrLuhpYABSTDcCaCAj3E3SyyQ&hl=en&sa=X&ved=2ahUKEwiZzubBlaCHAxU7EUQIHU5gBzcQ6AF6BAgeEAM
+match = -231.2%%
+title = 12 Con Giáp Theo Lịch Vạn Niên - Page 182 - Google Books Result
+url = https://books.google.com/books?id=uEr8EAAAQBAJ&pg=PA182&lpg=PA182&dq=chieu+lac+soc+12&source=bl&ots=83szdmUVVs&sig=ACfU3U3fkw4d7A3nP62ie9AT7EIueDbFcw&hl=en&sa=X&ved=2ahUKEwjjxszMoqGHAxVfyMkDHR6QCgMQ6AF6BAgfEAM
 
 [baovinhlong.vn]
 match = -137.5%%
