--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-12 15:47:59
+lastsearch = 2024-07-12 17:12:55
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,14 +12,14 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -64.7%%
-title = How I gutted my HOA : r/pettyrevenge
-url = https://www.reddit.com/r/pettyrevenge/comments/10fgrkx/how_i_gutted_my_hoa/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -164.7%%
-title = How can the HOA kick you out of your house when you ...
-url = https://www.quora.com/How-can-the-HOA-kick-you-out-of-your-house-when-you-own-it
+match = -194.1%%
+title = If you live in a neighborhood with a HOA can they keep out ...
+url = https://www.quora.com/If-you-live-in-a-neighborhood-with-a-HOA-can-they-keep-out-a-resident-if-they-are-not-listed-on-the-deed
 
 [lauragoodsonart.com]
 match = 47.1%%
