--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-12 15:47:15
+lastsearch = 2024-07-12 17:19:40
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlepMImke&sig=ACfU3U02x0jjuVO0HYLT1Oaifovsk0DwwA&hl=en&sa=X&ved=2ahUKEwiihPuxyKCHAxV8D1kFHTOkDH0Q6AF6BAgVEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlepOMqq5&sig=ACfU3U3NKynuzZ4O5RBMMAtEXGpt4irH5w&hl=en&sa=X&ved=2ahUKEwitgYu9o6GHAxWJ3skDHbfrCD8Q6AF6BAgaEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
