--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-12 18:18:12
+lastsearch = 2024-07-12 20:02:44
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -126.7%%
-title = Ways Station Gaming - "Nghiêng nước ...
-url = https://www.facebook.com/waysstation/photos/a.179106562519975/1171642583266363/?type=3
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -127,9 +127,9 @@ title = Máy chiếu Sony VPL-DX221 - Digiplus
 url = https://digiplus.vn/may-chieu-sony-vpl-dx221/
 
 [batdongsan.com.vn]
-match = -200.0%%
-title = Chung cư D2 Giảng Võ - Mua Bán Căn Hộ Chung Cư T7/ ...
-url = https://batdongsan.com.vn/ban-can-ho-chung-cu-chung-cu-d2-giang-vo
+match = -160.0%%
+title = Mua bán nhà mặt tiền tại đường D2, Quận Bình Tân
+url = https://batdongsan.com.vn/ban-nha-mat-pho-duong-d2-65
 
 [luatvietnam.vn]
 match = -220.0%%
