--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-12 18:12:35
+lastsearch = 2024-07-12 20:05:25
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -280.0%%
-title = The Letter to Ren An and Sima Qian’s Legacy
-url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fshQ0cx_d&sig=ACfU3U01NXorqW-4tsQhWMm1_NRyLk3Vbw&hl=en&sa=X&ved=2ahUKEwi89pmnr6GHAxXoMzQIHaMkAEwQ6AF6BAggEAM
+match = -440.0%%
+title = The Monasteries of the Wadi 'n Natrûn: The history of the ...
+url = https://books.google.com/books?id=_mIPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+ren+16&source=bl&ots=HlovDp67AV&sig=ACfU3U1HKEvHX_sC9iveRE3yQX4KhCyj0w&hl=en&sa=X&ved=2ahUKEwiV7pLDyKGHAxXqFmIAHe6ZC80Q6AF6BAgVEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
