--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-12 21:11:50
+lastsearch = 2024-07-12 21:52:18
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -12,9 +12,9 @@ title = Bộ ga chun LIVING - LV18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 
 [foreverbedding.net]
-match = -57.1%%
-title = Bộ ga chun chần mặt Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v18
+match = -33.3%%
+title = Bộ ga chun Velina V18 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
 match = -114.3%%
@@ -22,9 +22,9 @@ title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
 url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [changagoidemsonghong.com]
-match = -71.4%%
-title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
-url = https://changagoidemsonghong.com/chan-ga-goi-bc57
+match = -14.3%%
+title = Bộ chăn ga gối Walt Disney mã BY20001
+url = https://changagoidemsonghong.com/chan-ga-goi-by20001
 
 [demsonghonghanoi.com]
 match = -14.3%%
