--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-12 20:17:42
+lastsearch = 2024-07-12 21:44:15
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/South_China_Sea
 [books.google.com]
 match = -139.1%%
 title = Vietnam Travel Map Eighth Edition - Page 11 - Google Books Result
-url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz0Vl7aXv&sig=ACfU3U3SYCsExAxzRQOZvOZCj5E4vBaAjw&hl=en&sa=X&ved=2ahUKEwiTguCiy6GHAxW3ADQIHUs2BhoQ6AF6BAgjEAM
+url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz0VlccWy&sig=ACfU3U2-DIO5Wt1DjIvpop4-tm3FWUA1DA&hl=en&sa=X&ved=2ahUKEwia8frO3qGHAxVrGFkFHTo9BGoQ6AF6BAglEAM
 
 [www.travelweekly.com]
 match = -87.0%%
@@ -305,4 +305,9 @@ url = https://suckhoedoisong.vn/hoc-bu-trong-ngay-nghi-le-o-thai-binh-hieu-truon
 match = -82.6%%
 title = 100 students join military course in southern Vietnam
 url = https://tuoitrenews.vn/news/education/20240711/100-students-join-military-course-in-southern-vietnam/80893.html
+
+[www.crazyguyonabike.com]
+match = -82.6%%
+title = around the world - Part 1: Day 370: Thai Binh to Ninh Binh
+url = https://www.crazyguyonabike.com/doc/page/?page_id=365845
 
