--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-12 18:25:30
+lastsearch = 2024-07-12 21:53:23
 
 [demxanh.com]
 match = -3.3%%
@@ -17,9 +17,9 @@ title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào 
 url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [shopee.vn]
-match = 0.0%%
-title = gối điều hoà giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=gối điều hoà
+match = 23.3%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [goni.vn]
 match = 26.7%%
@@ -68,7 +68,7 @@ url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [xn--nekiovitnam-y69e.vn]
 match = 3.3%%
-title = Bảng giá chiếu mây điều hòa 2024 | Nekio Việt Nam
+title = Bảng giá chiếu mây điều hòa 2024 - Nekio Việt Nam
 url = https://xn--nekiovitnam-y69e.vn/bang-gia-chieu-may-dieu-hoa-2023/
 
 [chiaki.vn]
