--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-12 18:16:34
+lastsearch = 2024-07-12 21:52:49
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -52,14 +52,14 @@ title = Hôm nay mới được nằm thử chiếc chiếu trúc, vô cùng má
 url = https://www.youtube.com/watch?v=kKMas4N_KAk
 
 [www.facebook.com]
-match = 5.3%%
-title = Thế Giới Chiếu Trúc
-url = https://www.facebook.com/thegioichieutruc/
+match = 4.2%%
+title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
+url = https://www.facebook.com/chieutregiare/
 
 [chieutrucsaigon.com]
-match = 8.3%%
-title = MUA CHIẾU TRÚC CHÍNH HÃNG QUẬN TÂN BÌNH
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/mua-chieu-truc-quan-tan-binh-76.html
+match = 12.5%%
+title = CUNG CẤP CHIẾU TRÚC QUẬN PHÚ NHUẬN
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/cung-cap-chieu-truc-quan-phu-nhuan-75.html
 
 [www.xskthcm.com]
 match = -83.3%%
@@ -77,9 +77,9 @@ title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
 url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 
 [demxanh.com]
-match = -45.8%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 25.0%%
+title = Chiếu trúc hạt Hương Trúc nâu cà phê
+url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html
 
 [www.diepxuan.com]
 match = 100.0%%
