--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-07-12 21:15:31
+lastsearch = 2024-07-12 21:50:53
 
 [dreamland.vn]
 match = -32.0%%
@@ -12,9 +12,9 @@ title = Dreamland chuyên chăn ga gối đệm cao cấp
 url = http://dreamland.vn/Solid-AB45--(Vo-Chan-Dong)-i4079.html
 
 [demxanh.com]
-match = -24.0%%
-title = Chăn ga gối cưới Perfect 6 món màu đỏ P6M04
-url = https://demxanh.com/chan-ga-goi-cuoi-perfect-6-mon-mau-do-p6m04.html
+match = 0.0%%
+title = Gối tựa Đệm Xanh giá rẻ tại Hà Nội
+url = https://demxanh.com/goi-tua-dem-xanh.html
 
 [www.diepxuan.com]
 match = 48.0%%
@@ -82,14 +82,14 @@ title = 2024 Ryba w cieście piwnym kwestia smaku
 url = https://www.qcyc.ca/?q=node/109&height=730&scroll=auto&url=https://nsp47.ru/8639742fe43y
 
 [www.youtube.com]
-match = -80.0%%
-title = Vintage Doll Unboxing & Review - 1998 Avon Exclusive ...
-url = https://www.youtube.com/watch?v=Rra2SCJqcS0
-
-[www.instagram.com]
 match = -77.8%%
 title = Dreamland
-url = https://www.instagram.com/explore/locations/109169992552829/dreamland/?locale=en_US
+url = https://www.youtube.com/shorts/tTOLm6vZlgM
+
+[www.instagram.com]
+match = -122.2%%
+title = Instagram
+url = https://www.instagram.com/dl_washington/reel/C9REistMOJz/
 
 [m.youtube.com]
 match = 0.0%%
