--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-12 21:36:36
+lastsearch = 2024-07-12 21:49:12
 
 [www.reddit.com]
-match = 4.3%%
-title = Nemesis hits rank 2 Korea - 1726 lp
+match = -82.6%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
@@ -435,4 +435,9 @@ url = https://www.amazon.com/Ministry-Utmost-Happiness-novel/dp/1524733156
 match = -21.7%%
 title = Hungry in Hue and Hoi An - Plus Ultra
 url = https://notesplusultra.com/2017/05/24/hungry-in-hue-and-hoi-an/
+
+[maint.loc.gov]
+match = -26.7%%
+title = Board of Review
+url = https://maint.loc.gov/law/mlr/pdf/Board-of-Review_Vol-74.pdf
 
