--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-12 21:11:18
+lastsearch = 2024-07-12 21:52:09
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = 0.0%%
+title = Buy South Korean won
+url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
 
 [uk.trip.com]
 match = -233.3%%
@@ -57,9 +57,9 @@ title = Südkorea Reisen » Urlaub & Reisepreise auf ...
 url = https://www.tui.com/pauschalreisen/suedkorea/
 
 [www.linkedin.com]
-match = -200.0%%
-title = TUI
-url = https://www.linkedin.com/company/tuigroup
+match = -350.0%%
+title = Emirates and TUI Cruises reaffirm partnership for next two ...
+url = https://www.linkedin.com/posts/emirates_emirates-and-tui-cruises-reaffirm-partnership-activity-7171127634309857280-R2l6
 
 [maritime-executive.com]
 match = -308.3%%
