--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-12 20:32:19
+lastsearch = 2024-07-12 22:16:25
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [shopee.vn]
-match = 7.4%%
-title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
+match = -18.5%%
+title = Chăn Băng Lông Tuyết Nhung, Chăn Thái Sịn Cho Mùa ...
+url = https://shopee.vn/Chăn-Băng-Lông-Tuyết-Nhung-Chăn-Thái-Sịn-Cho-Mùa-Đông-Ấm-Áp-Loại-5kg-2x2-2m-i.529742790.25408766175
 
 [www.lazada.vn]
 match = -29.6%%
@@ -32,9 +32,9 @@ title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
 url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
 
 [ninhouse.vn]
-match = 37.5%%
-title = Mền Tuyết NIN - Hazelnut
-url = https://ninhouse.vn/products/men-tuyet-nin-hazelnut
+match = 32.0%%
+title = Mền Tuyết NIN - Liac Snow
+url = https://ninhouse.vn/products/men-tuyet-nin-liac-snow
 
 [www.youtube.com]
 match = -29.6%%
