--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-12 11:34:18
+lastsearch = 2024-07-12 22:20:32
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = Diccionario geográfico universal, 6: dedicado a la Reina ...
-url = https://books.google.com/books?id=SzAlAxSBB94C&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=MsaxYEKie6&sig=ACfU3U0yheLiyTg3UDJ-HbWwoXDXBYXNPw&hl=en&sa=X&ved=2ahUKEwjFtvCj1qCHAxUmEkQIHQ_5BFEQ6AF6BAgmEAM
+match = -176.5%%
+title = Official Army Register - Page 356 - Google Books Result
+url = https://books.google.com/books?id=TOYsAAAAIAAJ&pg=RA1-PA356&lpg=RA1-PA356&dq=man+in+hoa+dep+16&source=bl&ots=m4CdQyLeIU&sig=ACfU3U1dcvsoe7naK9QBchOIo81tZNVewA&hl=en&sa=X&ved=2ahUKEwiP_5Td5qGHAxXeM2IAHQIHADMQ6AF6BAgjEAM
 
 [tax.vermont.gov]
 match = -29.4%%
